RESOLVED FIXED90235
[Chromium] CTFontCopyTable of MacOSX10.5 SDK doesn't work for layout tables
https://bugs.webkit.org/show_bug.cgi?id=90235
Summary [Chromium] CTFontCopyTable of MacOSX10.5 SDK doesn't work for layout tables
Kenichi Ishibashi
Reported 2012-06-28 18:15:20 PDT
As of r120234, Chromium mac port should pass LayoutTests/css3/font-feature-settings-rendering.html, but it's failing on bots (the current expectation is MISSING, though). http://test-results.appspot.com/dashboards/flakiness_dashboard.html#showExpectations=true&tests=font-feature-settings-rendering When I tested the patch, I used 10.6 sdk. However, it seems that bots and Chrome official build use 10.5 sdk and CTFontCopyTable of 10.5 sdk doesn't work as expected. We need to use CGFontCopyTableForTag instead.
Attachments
Patch (1.95 KB, patch)
2012-06-28 18:20 PDT, Kenichi Ishibashi
no flags
Kenichi Ishibashi
Comment 1 2012-06-28 18:20:48 PDT
Kenichi Ishibashi
Comment 2 2012-06-28 18:22:54 PDT
Kent-san, could you rubber-stamp? I checked the patch works with 10.5 sdk.
Kent Tamura
Comment 3 2012-06-28 18:25:36 PDT
Comment on attachment 150057 [details] Patch rubber-stamped
Kenichi Ishibashi
Comment 4 2012-06-28 18:31:04 PDT
Comment on attachment 150057 [details] Patch Thanks!
WebKit Review Bot
Comment 5 2012-06-28 19:38:05 PDT
Comment on attachment 150057 [details] Patch Clearing flags on attachment: 150057 Committed r121510: <http://trac.webkit.org/changeset/121510>
WebKit Review Bot
Comment 6 2012-06-28 19:38:09 PDT
All reviewed patches have been landed. Closing bug.
Kent Tamura
Comment 7 2012-06-29 00:29:39 PDT
BTW, We won't support OS X 10.5 since M22.
Kenichi Ishibashi
Comment 8 2012-06-29 00:40:51 PDT
(In reply to comment #7) > BTW, We won't support OS X 10.5 since M22. Thanks you for the heads-up. CGFontCopyTableForTag isn't deprecated so it should work. In any case, I'm happy to rewrite the code to use CoreText APIs after bots and official build start using 10.6 sdk (or later).
Note You need to log in before you can comment on or make changes to this bug.