[Chromium] CTFontCopyTable of MacOSX10.5 SDK doesn't work for layout tables https://bugs.webkit.org/show_bug.cgi?id=90235

Reviewed by Kent Tamura.

Use CGFontCopyTableForTag instead.

No new tests. css3/font-feature-settings-rendering.html should pass. I'll rebase expectations once bots get the result.

* platform/graphics/harfbuzz/ng/HarfBuzzFaceCoreText.cpp:
(WebCore::harfbuzzCoreTextGetTable):


Canonical link: https://commits.webkit.org/108077@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121510 268f45cc-cd09-0410-ab3c-d52691b4dbfc